myStyleFile/myStyle.css
    @font-face {
    font-family: "Fira Sans", "GELIconsFull";
    src: url("http://fonts.gstatic.com/s/firasans/v5/5jAMGMsBXS6xUYEytGcZdD8E0i7KZn-EPnyo3HZu7kw.woff");
    src: url('fonts/gel-news-icons-v3/gelnewsicons-regular-webfont.eot');
}

html {
    position: relative;
    min-height: 100%;
}

body {
    margin: 0 0 50px;
}

.navigation {
    list-style: none;
    margin: 0;
    background-color: crimson;
    display: flex;
    justify-content: flex-end;
    font-family: "Fira Sans", sans-serif;
    font-size: 15px;
    z-index: 1000;
}

.menu-img {
    display: none;
}

.navigation a {
    text-decoration: none;
    display: flex;
    justify-content: center;
    padding: 1em;
    color: white;
}

.navigation a:hover {
    background-color: #EC677D;
}

h1 {
    color: white;
    font-size: 5em;
    font-weight: bold;
    margin: auto;
    margin-top: 8%;
    text-align: center;
    display: flex;
    flex-direction: column;
}

h3 {
    line-height: 1px;
    font-family: sans-serif;
}

p {
    font-size: 10px;
}

.search {
    margin: auto;
    display: flex;
    width: 50%;
    margin-top: 1em;
    margin-bottom: 3em;
}

#txtautocomplete {
    display: flex;
    width: 100%;
    height: 1.8em;
    font-size: 2em;
    font-style: italic;
    border-radius: 3em;
    text-align: center;
    border: 8px solid rgb(255, 255, 255, 0.7);
    border: 8px solid rgba(255, 255, 255, 0.7);
    -webkit-background-clip: padding-box;
    /* for Safari */
    background-clip: padding-box;
    /* for IE9+, Firefox 4+, Opera, Chrome */
    border-radius: 3em;
}

.maincontainer {
    margin: auto;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 65%;
    margin-bottom: 5em;
}


/*
#checkboxes{
    width: 18%;
    background-color: white;
    height: 22em;
    position: fixed;
}

#checkboxes label {
  float: left;
    margin-left: 4px;
  
}
#checkboxes ul {
  list-style: none;
  float: left;
  
}

#checkboxes li {
    display: flex;
    flex-direction: row;
    justify-content:flex-start;
    vertical-align: middle;
    margin-left: 3px;
  
}
*/

.pic-container {
    border: solid 1px black;
    background-color: whitesmoke;
    display: flex;
    flex-direction: column;
    width: 30%;
    height: 15em;
    margin-bottom: 5px;
    margin-right: 5px;
    border: 12px solid rgb(255, 255, 255, 0.7);
    border: 12px solid rgba(255, 255, 255, 0.7);
    -webkit-background-clip: padding-box;
    /* for Safari */
    background-clip: padding-box;
    /* for IE9+, Firefox 4+, Opera, Chrome */
    border-radius: 1em;
    padding-bottom: 2px;
}

.pic-container p {
    font-size: 13px;
    font-family: sans-serif;
    font-weight: bold;
    margin-left: 3px;
    width: 100%;
}

.pic-container img {
    height: 12em;
    width: 100%;
}

footer {
    position: absolute;
    left: 0px;
    bottom: 0px;
    height: 50px;
    width: 100%;
    background-color: black;
    color: white;
    text-align: center;
}

footer p {
    font-size: 0.8em;
}

.favourite-table {
    margin: auto;
    display: flex;
    flex-direction: column;
    margin-top: 7%;
    width: 50%;
}

.favourite-table table {
    margin-top: 7%;
    width: 100%;
}

.favourite-table thead td {
    height: 20%;
    width: 100%;
    color: white;
    background-color: red;
    font-size: 2em;
    font-family: "Geneva,sans-serif";
    border-radius: 5em;
    font-weight: bold;
}

.favourite-table td {
    height: 8%;
    width: 100%;
    background-color: white;
    border: 2px solid black;
    font-size: 1.3em;
    border-radius: 5em;
    padding-left: 0.4em;
}

.div-signUp {
    margin: auto;
    margin-top: 4em;
    margin-bottom: 5em;
    background-color: floralwhite;
    border-radius: 15px;
    border: 12px solid rgb(255, 255, 255, 0.5;
    );
    border: 12px solid rgba(255, 255, 255, 0.5);
    -webkit-background-clip: padding-box; // for Safari 
    background-clip: padding-box;
    display: flex;
    flex-direction: column;
    width: 40%;
    text-align: center;
}

.div-signUp input {
    border-radius: 1em;
    height: 3em;
    display: flex;
    flex-direction: column;
    width: 98%;
    margin-right: 1%;
    margin-left: 1%;
}

.div-signUp p {
    font-size: 1.1em;
    margin: 0px;
    font-family: "sans-serif";
}

.div-signUp h2 {
    font-size: 1.4em;
    margin-top: 0px;
    font-family: "Geneva,sans-serif";
    height: 1em;
    padding-top: 1.2em;
    padding-bottom: 1.2em;
    background-color: beige;
}

.div-signUp button:hover {
    text-decoration: underline;
    border: 1px solid black;
}

.div-signUp button {
    margin: auto;
    display: flex;
    justify-content: center;
    margin-top: 2%;
    background-color: crimson;
    color: white;
    width: 80%;
    height: 3em;
    margin-bottom: 1%;
    border-radius: 1em;
}

.signIn-form {
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-top: 4em;
    margin-bottom: 4em;
    padding-top: 2em;
    text-align: center;
    background-color: floralwhite;
    opacity: 0.9;
    width: 35%;
    border-radius: 15px;
    border: 12px solid rgb(255, 255, 255, 0.5);
    border: 12px solid rgba(255, 255, 255, 0.5);
    -webkit-background-clip: padding-box;
    /* for Safari */
    background-clip: padding-box;
    /* for IE9+, Firefox 4+, Opera, Chrome */
}

.signIn-form img {
    margin: auto;
    display: flex;
    height: 20%;
    width: 25%;
}

.signIn-form input {
    display: flex;
    flex-direction: column;
    font-size: 1.4em;
    font-family: "Arial,sans-serif";
    background-color: beige;
    height: 2em;
    padding-top: 0.5em;
    width: 90%;
    margin-left: 5%;
    margin-right: 5%;
    margin-bottom: 1%;
    border-radius: 1em;
    padding-left: 0.5em;
    padding-bottom: 0.2em;
}

.signIn-form button {
    margin: auto;
    display: flex;
    justify-content: center;
    margin-top: 2%;
    background-color: crimson;
    color: white;
    width: 80%;
    height: 3em;
    ;
    border-radius: 1em;
}

.signIn-form button:hover {
    text-decoration: underline;
    border: 1px solid black;
}

.signIn-form h2 {
    font-size: 1.4em;
    margin-top: 0px;
    font-family: "Geneva,sans-serif";
    background-color: ;
    height: 2em;
    padding-top: 0.5em;
    color: dimgrey;
}

video {
    position: fixed;
    top: 50%;
    left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    z-index: -100;
    transform: translateX(-50%) translateY(-50%);
    background: transparent url('/images/screenVideo.png') no-repeat 0 0;
    background-attachment: fixed;
    background-repeat: no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
}

@media all and (max-width: 850px) {
    body{
    background: url(images/greece.jpg) no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-attachment: fixed;
    }
    
    #bgvid {
        display: none;
    }
    .navigation {
        justify-content: space-around;
    }
    .search {
        width: 80%;
    }
    h1 {
        font-size: 3em;
    }
    #txtautocomplete {
        height: 2em;
        font-size: 1.6em;
    }
    .maincontainer {
        width: 65%;
    }
    .pic-container {
        width: 40%;
        height: 11em;
    }
    .pic-container img {
        height: 8em;
    }
    .div-signUp {
        width: 60%;
    }
    .div-signUp input {
        height: 2.5em;
    }
    .div-signUp p {
        font-size: 1em;
    }
    .div-signUp h2 {
        font-size: 1.3em;
    }
    .favourite-table {
        width: 65%;
    }
    .favourite-table thead td {
        height: 2em;
        font-size: 1.5em;
    }
    .signIn-form img {
        width: 25%;
        height: 14%;
    }
}

@media all and (max-width: 400px) {
    body { 
      background: url(images/greece.jpg) no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-attachment: fixed;
      
    }
    
    #bgvid {
        display: none;
    }
    .navigation {
        position: fixed;
        left: 0;
        top: 10px;
    }
    .menu-img {
        display: block;
        padding: 10px 7px 10px 7px;
        border-top-left-radius: 10px;
        border-bottom-left-radius: 10px;
        width: 25px;
        background-color: crimson;
        transition: width 0.7s;
        margin-top: 0px;
        position: fixed;
        top: 0px;
        right: 0px;
    }
    .menu-img:focus {
        width: 0;
    }
    .menu-img:focus+ul {
        left: 0px;
    }
    .navigation {
        display: inline-block;
        margin: 0;
        padding: 5px;
        width: 120px;
        background-color: crimson;
        border-top-right-radius: 10px;
        border-bottom-right-radius: 10px;
        position: fixed;
        top: 0px;
        left: -130px;
        transition: left 0.7s;
    }
    .navigation li {
        padding: 5px;
        list-style-type: none;
    }
    .navigation a {
        color: white;
        text-decoration: none;
    }
    .search {
        width: 90%;
        margin-bottom: 3em;
    }
    #txtautocomplete {
        height: 2.5em;
        font-size: 1em;
        border: 5px solid rgb(255, 255, 255, 0.7);
        border: 5px solid rgba(255, 255, 255, 0.7);
        -webkit-background-clip: padding-box;
        /* for Safari */
        background-clip: padding-box;
        /* for IE9+, Firefox 4+, Opera, Chrome */
    }
    h1 {
        font-size: 2em;
        margin-top: 20%;
    }
    .maincontainer {
        width: 65%;
        float: right;
    }
    .pic-container {
        width: 85%;
        height: 10em;
    }
    .pic-container p {
        font-size: 13px;
        font-family: sans-serif;
        font-weight: bold;
        margin-left: 2px;
        width: 100%;
    }
    .pic-container img {
        height: 8em;
    }
    .signIn-form {
        width: 80%;
    }
    .signIn-form input {
        font-size: 1em;
    }
    .div-signUp {
        width: 85%;
    }
    .div-signUp input {
        height: 2em;
    }
    .div-signUp p {
        font-size: 0.9em;
    }
    .div-signUp h2 {
        font-size: 1.1em;
    }
    .favourite-table {
        width: 85%;
    }
    .favourite-table thead td {
        height: 1.3em;
        font-size: 1.2em;
    }
    .favourite-table td {
        height: 1.1em;
        font-size: 1.1em;
    }
    .signIn-form img {
        width: 25%;
        height: 15%;
    }
   
   
}

